# text2sql

./: .gitignore  batch_inference_llm.py  pyproject.toml
text2sql/: batch_inference.ipynb  data_models.py  datasets.py  enums.py  get_examples.py  inference_llm.py  pipeline.ipynb  prepare_prompts.ipynb  utils.py
text2sql/experiments/: data_preprocess.ipynb
text2sql/prompt/: prompt_factory.py  prompt_templates.py
