[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = ""
authors = ["Said Kamalov <s.kamalovwork@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.3.2"
nltk = "^3.9.1"
tiktoken = "^0.9.0"
openai = "^1.66.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
